[FIX] html_builder: fix the "Version Control" alert style
This commit fixes the style of the "Version Control" alert. Indeed, its
background color is too light, making it difficult to read the white
text on it, and the buttons do not have any color unless hovered, making
the options hard to use.

This commit restores the style used before the refactoring.

task-4367641

closes odoo/odoo#218637

--- a/addons/html_builder/static/src/sidebar/option_container.scss
+++ b/addons/html_builder/static/src/sidebar/option_container.scss
@@ -36,6 +36,16 @@
             border-spacing: $o-hb-row-spacing $o-hb-row-spacing;
         }
     }
+
+    .o_we_version_control {
+        background-color: $o-we-color-info;
+
+        div.title {
+            margin-bottom: $o-we-sidebar-content-field-label-spacing;
+            text-transform: uppercase;
+            font-weight: bold;
+        }
+    }
 }
 
 .o_we_img_animate:hover img {
